Fixed map into note page

--- a/Systems/Web/LostAnimals.Web/wwwroot/index.html
+++ b/Systems/Web/LostAnimals.Web/wwwroot/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -32,11 +32,9 @@
     <script src="_framework/blazor.webassembly.js"></script>
     <script src="_content/MudBlazor/MudBlazor.min.js"></script>
     <script>
-        Blazor.start().then(function () {
-            var customScript = document.createElement('script');
-            customScript.setAttribute('src', 'js/yandexMap.js');
-            document.head.appendChild(customScript);
-        });
+		var customScript = document.createElement('script');
+        customScript.setAttribute('src', 'js/yandexMap.js');
+        document.head.appendChild(customScript);
     </script>
 </body>
 
