Added authorization pages to web

--- a/Systems/Web/LostAnimals.Web/wwwroot/index.html
+++ b/Systems/Web/LostAnimals.Web/wwwroot/index.html
@@ -24,6 +24,16 @@
         <div class="loading-progress-text"></div>
     </div>
 
+    <style>
+        .link-white {
+            color: white;
+        }
+
+            .link-white:hover {
+                color: white;
+            }
+    </style>
+
     <div id="blazor-error-ui">
         An unhandled error has occurred.
         <a href="" class="reload">Reload</a>
